--- a/demo/index.html
+++ b/demo/index.html
@@ -1,75 +1,106 @@
 <html>
-  <head>
-    <script src="../bower_components/angular/angular.min.js"></script>
-    <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="../bower_components/tv4/tv4.js"></script>
-    <script src="../bower_components/objectpath/lib/ObjectPath.js"></script>
-    <script src="../bower_components/angular-schema-form/dist/schema-form.min.js"></script>
-    <script src="../bower_components/angular-schema-form-bootstrap/bootstrap-decorator.min.js"></script>
-    <script src="../dist/angular-schema-form-ui-datepicker.js"></script>
+    <head>
+        <script src="../bower_components/angular/angular.min.js"></script>
+        <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+        <script src="../bower_components/tv4/tv4.js"></script>
+        <script src="../bower_components/objectpath/lib/ObjectPath.js"></script>
+        <!--<script src="../bower_components/angular-schema-form/dist/schema-form.min.js"></script>-->
+        <script src="../bower_components/angular-schema-form-bootstrap/dist/angular-schema-form-bootstrap-bundled.min.js"></script>
+        <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="main.css">
+        <script src="../dist/angular-schema-form-ui-datepicker.js"></script>
 
-    <script>
+        <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="main.css">
 
-      angular.module('test', ["schemaForm","angularSchemaFormUiDatepicker"]).controller('FormController', function($scope) {
+        <script>
 
-        $scope.schema = {
-  "type": "object",
-  "properties": {
-    "name": {
-      "type": "string",
-      "title": "Name",
-      "description": "Name or alias",
-      "maxLength": 10,
-      "minLength": 2,
-      "required": true
-    }
-  }
-}
+            angular.module('test', ["schemaForm", "angularSchemaFormUiDatepicker"]).controller('FormController', function ($scope) {
 
-        $scope.form = [{"type":"angular-schema-form-ui-datepicker","key":"name","myOwnFormOption":"Hello world!"}]
-        $scope.model = {};
+                $scope.schema = {
+                    "type": "object",
+                    "properties": {
+                        "name": {
+                            "type": "string",
+                            "title": "Name",
+                            "description": "Name or alias",
+                            "maxLength": 10,
+                            "minLength": 2,
+                            "required": true
+                        },
+                        "date2": {
+                            "type": "string",
+                            "title": "Date2",
+                            "description": "Name or alias",
+                            "maxLength": 10,
+                            "minLength": 2,
+                            "required": true
+                        },
+                        "anythingElse": {
+                            "type": "string",
+                            "title": "Another input",
+                            "description": "Name or alias",
+                            "maxLength": 10,
+                            "minLength": 2,
+                            "required": true
+                        }
+                    }
+                }
 
-        $scope.debug = {schema: angular.copy($scope.schema), form: angular.copy($scope.form)};
+                $scope.form = [
+                    {
+                        "type": "angular-schema-form-ui-datepicker",
+                        "key": "name",
+                        "myOwnFormOption": "Hello world!"
+                    }, {
+                        "type": "angular-schema-form-ui-datepicker",
+                        "key": "date2",
+                        "myOwnFormOption": "Hello world!"
+                    },
+                    "anythingElse"
+                ]
+                $scope.model = {};
 
-      });
+                $scope.debug = {
+                    schema: angular.copy($scope.schema),
+                    form: angular.copy($scope.form)
+                };
 
-    </script>
-    <title>Testing angular-schema-form-ui-datepicker ASF addon</title>
-  </head>
+            });
+        </script>
+        <title>Testing angular-schema-form-ui-datepicker ASF addon</title>
+    </head>
 
-  <body ng-app="test">
-    <div class="container-fluid" ng-controller="FormController">
+    <body ng-app="test">
+        <div class="container-fluid" ng-controller="FormController">
 
-        <div class="col-sm-6 form">
-          <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+            <div class="col-sm-6 form">
+                <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+            </div>
+
+            <div class="col-sm-6 debug">
+                <div class="wrapper">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>Model</h4>
+                            <pre>{{model | json}}</pre>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>Form</h4>
+                            <pre>{{debug.form | json}}</pre>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>Schema</h4>
+                            <pre>{{debug.schema | json}}</pre>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="col-sm-6 debug">
-          <div class="wrapper">
-            <div class="row">
-              <div class="col-md-12">
-                <h4>Model</h4>
-                <pre>{{model | json}}</pre>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h4>Form</h4>
-                <pre>{{debug.form | json}}</pre>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h4>Schema</h4>
-                <pre>{{debug.schema | json}}</pre>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-  </body>
+    </body>
 
 </html>
