--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
 
         <script>
 
-            var app = angular.module('test', ["schemaForm", "schemaForm-datePickerUI", "angularSchemaFormUiDatepicker", "pascalprecht.translate"]).controller('FormController', function (schemaForm, $scope) {
+            var app = angular.module('test', ["schemaForm", "angularSchemaFormUiDatepicker", "pascalprecht.translate"]).controller('FormController', function (schemaForm, $scope) {
 
                 $scope.schema = {
                     "type": "object",
