--- a/demo/index.html
+++ b/demo/index.html
@@ -72,7 +72,9 @@
                     }
                 ]
 
-                $scope.model = {};
+                $scope.model = {
+                    "dateThree": "2017-07-03"
+                };
 
                 $scope.debug = {
                     schema: angular.copy($scope.schema),
